--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -1,21 +1,40 @@
 @CHARSET "UTF-8";
 
-header_container kalrav_logo {
+html, body {
+	height: 100%;
 	margin: 0;
-	padding: 0;
-}
-
-.login_body {
-	padding-top: 10%;
-	font-size: 12px;
-	background: url("../images/stage_backdrop_2.jpg") no-repeat center
-		center fixed;
+	overflow: hidden;
+	background: url("../images/stage_backdrop.jpg") no-repeat center center
+		fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
 }
 
+header {
+	display: block;
+	background-color: transparent;
+	height: 10%;
+}
+
+footer {
+	display: block;
+	bottom:0;
+	position: fixed;
+	background-color: transparent;
+	height: 10%;
+}
+
+#main_body {
+	height: 80%;
+	display: block;
+	overflow: auto;
+}
+
+
+
+/**login start**/
 .main {
 	max-width: 320px;
 	margin: 0 auto;
@@ -61,6 +80,8 @@ h3 {
 	margin: 0;
 }
 
+/**Login-body end**/
+
 /** footer start **/
 .social-icon {
 	list-style: none;
@@ -94,14 +115,16 @@ h3 {
 	color: #fff; /* social icon hover color */
 }
 
-.footer {
+#footer {
 	position: absolute;
+	right: 0;
 	bottom: 0;
+	left: 0;
 	width: 100%;
 	padding: 5px;
 	height: 60px;
 	background-color: #000;
-	opacity: 0.5;
+	opacity: 0.6;
 }
 
 .footer_text {
@@ -113,4 +136,88 @@ h3 {
 }
 
 /** footer end **/
+
+/** Registration Form**/
+@import "font-awesome.min.css";
+
+@import "font-awesome-ie7.min.css";
+/* Space out content a bit */
+body {
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
+
+/* Everything but the jumbotron gets side spacing for mobile first views */
+.header, .marketing, .footer {
+	padding-right: 15px;
+	padding-left: 15px;
+}
+
+/* Custom page header */
+.header {
+	border-bottom: 1px solid #e5e5e5;
+}
+/* Make the masthead heading the same height as the navigation */
+.header h3 {
+	padding-bottom: 19px;
+	margin-top: 0;
+	margin-bottom: 0;
+	line-height: 40px;
+}
+
+/* Custom page footer */
+.footer {
+	padding-top: 19px;
+	color: #777;
+	border-top: 1px solid #e5e5e5;
+}
+
+/* Customize container */
+@media ( min-width : 768px) {
+	.container {
+		max-width: 730px;
+	}
+}
+
+.container-narrow>hr {
+	margin: 30px 0;
+}
+
+/* Main marketing message and sign up button */
+.jumbotron {
+	text-align: center;
+	border-bottom: 1px solid #e5e5e5;
+}
+
+.jumbotron .btn {
+	padding: 14px 24px;
+	font-size: 21px;
+}
+
+/* Supporting marketing content */
+.marketing {
+	margin: 40px 0;
+}
+
+.marketing p+h4 {
+	margin-top: 28px;
+}
+
+/* Responsive: Portrait tablets and up */
+@media screen and (min-width: 768px) {
+	Remove the padding we set earlier
+	.header, .marketing, .footer {
+		padding-right: 0;
+		padding-left: 0;
+	/* }
+	Space out the masthead */
+	.header {
+		margin-bottom: 30px;
+	}
+	/* Remove the bottom border on the jumbotron for visual effect */
+	.jumbotron {
+		border-bottom: 0;
+	}
+}
+
+/** end of Registration Form **/
