--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -136,27 +136,27 @@ html, body {
 }
 /** end of footer **/
 
-/** Registration Form**/
+/* /** Registration Form**/
 @import "font-awesome.min.css";
 
 @import "font-awesome-ie7.min.css";
-/* Space out content a bit */
-/* body {
+Space out content a bit
+body {
 	padding-top: 20px;
 	padding-bottom: 20px;
-} */
+}
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
+Everything but the jumbotron gets side spacing for mobile first views
 .header, .marketing, .footer {
 	padding-right: 15px;
 	padding-left: 15px;
 }
 
-/* Custom page header */
+Custom page header
 .header {
 	border-bottom: 1px solid #e5e5e5;
 }
-/* Make the masthead heading the same height as the navigation */
+Make the masthead heading the same height as the navigation
 .header h3 {
 	padding-bottom: 19px;
 	margin-top: 0;
@@ -164,14 +164,14 @@ html, body {
 	line-height: 40px;
 }
 
-/* Custom page footer */
+Custom page footer
 .footer {
 	padding-top: 19px;
 	color: #777;
 	border-top: 1px solid #e5e5e5;
 }
 
-/*Customize container*/
+Customize container
 @media ( min-width : 768px) {
 	.container {
 		max-width: 730px;
@@ -182,7 +182,7 @@ html, body {
 	margin: 30px 0;
 }
 
-/* Main marketing message and sign up button */
+Main marketing message and sign up button
 .jumbotron {
 	text-align: center;
 	border-bottom: 1px solid #e5e5e5;
@@ -193,7 +193,7 @@ html, body {
 	font-size: 21px;
 }
 
-/* Supporting marketing content */
+Supporting marketing content
 .marketing {
 	margin: 40px 0;
 }
@@ -202,14 +202,14 @@ html, body {
 	margin-top: 28px;
 }
 
-/* Responsive: Portrait tablets and up */
+Responsive: Portrait tablets and up
 @media screen and (min-width: 768px) {
 	Remove the padding we set earlier
 	.header, .marketing, .footer {
 		padding-right: 0;
 		padding-left: 0;
-		/* }
-	Space out the masthead */
+		}
+	Space out the masthead
 		.
 		header
 		{
@@ -217,11 +217,11 @@ html, body {
 		:
 		30px;
 	}
-	/* Remove the bottom border on the jumbotron for visual effect */
+	Remove the bottom border on the jumbotron for visual effect
 	.jumbotron {
 		border-bottom: 0;
 	}
-}
+} */
 
 /** end of Registration Form **/
 
